<resources>
    <string name="app_name">Android Example</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="first_item">First Item</string>
    <string name="second_item">Second Item</string>
    <string name="third_item">Third Item</string>
    <string name="avatar">avatar</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_accumsan_sodales_nisl_in_commodo_ex_lacinia_iaculis_donec_feugiat_lacinia_malesuada_nam_semper_sapien_quis_erat_commodo_id_rutrum_arcu_gravida_sed_id_pharetra_augue_sed_eleifend_metus_donec_semper_tristique_eros_at_venenatis_mauris_nec_felis_scelerisque_ultrices_odio_id_maximus_magna_nam_ultrices_neque_quis_aliquet_volutpat_tellus_libero_dapibus_ligula_a_feugiat_turpis_leo_sit_amet_nisl_class_aptent_taciti_sociosqu_ad_litora_torquent_per_conubia_nostra_per_inceptos_himenaeos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan sodales nisl, in commodo ex lacinia iaculis. Donec feugiat lacinia malesuada. Nam semper sapien quis erat commodo, id rutrum arcu gravida. Sed id pharetra augue, sed eleifend metus. Donec semper tristique eros at venenatis. Mauris nec felis scelerisque, ultrices odio id, maximus magna. Nam ultrices, neque quis aliquet volutpat, tellus libero dapibus ligula, a feugiat turpis leo sit amet nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="calendar">calendar</string>
    <string name="camera">camera</string>
    <string name="details_name">Name:</string>
    <string name="details_gender">Gender:</string>
    <string name="details_height">Height:</string>
    <string name="details_mass">Mass:</string>
    <string name="details_skin_color">Skin color:</string>
    <string name="details_hair_color">Hair color:</string>
    <string name="details_eye_color">Eye color:</string>
    <string name="details_birth_year">Birth year:</string>
</resources>