<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/FirstFragment">
  <fragment
    android:id="@+id/FirstFragment"
    android:name="org.bziembanski.androidexample.screens.first_screen.FirstFragment"
    android:label="@string/first_fragment_label"
    tools:layout="@layout/fragment_first">
    <action
      android:id="@+id/action_FirstFragment_to_DetailsFragment"
      app:destination="@id/DetailsFragment">
      <argument
        android:name="personId"
        app:argType="integer"
        android:defaultValue="0" />
    </action>
  </fragment>

  <fragment
    android:id="@+id/SecondFragment"
    android:name="org.bziembanski.androidexample.screens.second_screen.SecondFragment"
    android:label="@string/second_fragment_label"
    tools:layout="@layout/fragment_second" />

  <fragment
    android:id="@+id/ThirdFragment"
    android:name="org.bziembanski.androidexample.screens.third_screen.ThirdFragment"
    android:label="@string/third_fragment_label"
    tools:layout="@layout/fragment_third" />

  <fragment
    android:id="@+id/DetailsFragment"
    android:name="org.bziembanski.androidexample.screens.details.DetailsFragment"
    android:label="Details"
    tools:layout="@layout/fragment_details">
    <argument
      android:name="personId"
      app:argType="integer"
      android:defaultValue="0" />
  </fragment>
</navigation>